content/posts/kubernetes/yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: my-service
                port:
